<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_plus"
        android:title="@string/add_subquest"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_json"
        android:title="@string/show_json"
        app:showAsAction="never"/>

    <group
        android:id="@+id/daynight_options">
        <item
            android:id="@+id/action_dark_select"
            android:title="@string/dark_select"
            app:showAsAction="never">
            <menu>
                <item android:id="@+id/night_follow_system"
                      android:title="@string/follow_system_mode" />
                <item android:id="@+id/night_yes"
                      android:title="@string/dark_mode" />
                <item android:id="@+id/night_no"
                      android:title="@string/light_mode" />
                <item android:id="@+id/battery_auto"
                      android:title="@string/auto" />
            </menu>
        </item>
    </group>

</menu>