<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/element_header_container"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:clickable="false"
              android:focusable="false" >

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/element_header_text"
              android:clickable="false"
              android:focusable="false"
              android:layout_weight="1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />

    <Button
        android:id="@+id/element_header_add"
        android:text="@string/add_subquest"
        android:clickable="true"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/element_header_edit"
        android:text="@string/edit_quest"
        android:clickable="true"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/element_header_delete"
        android:text="@string/delete_quest"
        android:clickable="true"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>

